# rubygem-testify

./: .gitignore  Gemfile  Makefile.in  README.rdoc  Rakefile  TODO  notes  testify.gemspec  testify.in
doc/: flow.txt
features/support/: env.rb
filters/: carp_deline
filters.d/: carp_deline  datetime
l10n/en/: ambiguous.l10n  badsyntax.l10n  help_create.l10n  help_delete.l10n  help_exit.l10n  help_help.l10n  help_list.l10n  help_modify.l10n  help_quit.l10n  help_run.l10n  help_show.l10n  help_update.l10n  nohelp.l10n  nolocalised.l10n  none.l10n  unimplmented.l10n  unknown.l10n  unlocalised.l10n
lib/: commands.rb  testify.rb  version.rb
lib/testify/: version.rb
pmods/: Command.pm  Filter.pm  L10n.pm  TCfg.pm
pmods/TCfg/: Block.pm
test/: helper.rb  test_testify.rb
trunk/testify/: .cvsignore  MANIFEST  Makefile.in  acinclude.m4  configure.ac  testify.in
trunk/testify/doc/: flow.txt  outline.txt  working-notes.txt
trunk/testify/filters/: carp_deline  datetime
trunk/testify/l10n/: Makefile  README  mkl10n.pl.in
trunk/testify/l10n/en/: help_add.l10n  help_compare.l10n  help_remove.l10n  nofilter.l10n
